# Coursework_SQL

./: README.md  main.py  pyproject.toml
src/: DBManager.py  utils.py
